# cwal

./: .gitignore  CMakeLists.txt  README.md
include/: walreader.h  walstream.h  walwriter.h
include/CRC/: CRC.h
src/: main.cpp  walreader.cpp  walstream.cpp  walwriter.cpp
tests/: bench.cpp  log_tests.cpp
